--- a/package.json
+++ b/package.json
@@ -19,34 +19,39 @@
     "node": ">=0.10.26"
   },
   "devDependencies": {
-    "babelify": "^5.0.4",
-    "browser-sync": "^2.2.2",
-    "browserify": "^5.10.0",
+    "babelify": "^6.4.0",
+    "browser-sync": "^2.9.11",
+    "browserify": "^12.0.1",
     "debowerify": "^1.2.0",
     "del": "^0.1.3",
-    "express": "^4.12.2",
+    "express": "^4.13.3",
     "gulp": "^3.8.8",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^2.0.0",
-    "gulp-notify": "^1.6.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-if": "^2.0.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.0",
-    "gulp-sass": "^1.3.x",
-    "gulp-sourcemaps": "^1.5.0",
-    "gulp-streamify": "0.0.5",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "humps": "^0.4.2",
-    "lodash": "^3.3.1",
-    "morgan": "^1.5.1",
-    "react": "^0.12.x",
-    "react-document-title": "^1.0.2",
-    "react-router": "^0.11.x",
-    "reflux": "^0.2.5",
-    "run-sequence": "^0.3.6",
-    "superagent": "^0.21.0",
-    "vinyl-source-stream": "^0.1.1",
-    "watchify": "^2.4.x",
-    "when": "^3.7.2"
+    "gulp-sass": "^2.1.x",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-streamify": "1.0.2",
+    "gulp-uglify": "^1.4.2",
+    "gulp-util": "^3.0.7",
+    "history": "^1.13.0",
+    "humps": "^1.0.0",
+    "lodash": "^3.10.1",
+    "morgan": "^1.6.1",
+    "react-dom": "^0.14.1",
+    "react-document-title": "^2.0.1",
+    "react-router": "^1.0.0-rc3",
+    "reflux": "^0.3.0",
+    "run-sequence": "^1.1.4",
+    "superagent": "^1.4.0",
+    "vinyl-source-stream": "^1.1.0",
+    "watchify": "^3.5.x",
+    "when": "^3.7.4"
+  },
+  "dependencies": {
+    "react": "^0.14.1",
+    "react-dom": "^0.14.1"
   }
 }
